Updating generated code
