# proto/v1beta1/resource_details_go_proto/resource_details.pb.go
@@ -99,8 +99,8 @@ func (m *OperatorDetails) GetOperators() []*OperatorIdentifier {
 }
 
 type OperatorIdentifier struct {
-	OperatorName         string   `protobuf:"bytes,1,opt,name=operator_name,json=operatorName,proto3" json:"operator_name,omitempty"`
-	OperatorVersion      string   `protobuf:"bytes,2,opt,name=operator_version,json=operatorVersion,proto3" json:"operator_version,omitempty"`
+	Name                 string   `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	Version              string   `protobuf:"bytes,2,opt,name=version,proto3" json:"version,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -131,16 +131,16 @@ func (m *OperatorIdentifier) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_OperatorIdentifier proto.InternalMessageInfo
 
-func (m *OperatorIdentifier) GetOperatorName() string {
+func (m *OperatorIdentifier) GetName() string {
 	if m != nil {
-		return m.OperatorName
+		return m.Name
 	}
 	return ""
 }
 
-func (m *OperatorIdentifier) GetOperatorVersion() string {
+func (m *OperatorIdentifier) GetVersion() string {
 	if m != nil {
-		return m.OperatorVersion
+		return m.Version
 	}
 	return ""
 }
@@ -155,24 +155,23 @@ func init() {
 func init() { proto.RegisterFile("resource_details.proto", fileDescriptor_d924ae8f54835e8c) }
 
 var fileDescriptor_d924ae8f54835e8c = []byte{
-	// 292 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x91, 0x41, 0x4b, 0xc3, 0x40,
-	0x10, 0x85, 0xd9, 0x16, 0x95, 0x8e, 0xd5, 0x96, 0x45, 0x24, 0x78, 0x0a, 0xe9, 0xa5, 0x5e, 0x36,
-	0x54, 0x3d, 0x48, 0xc1, 0x83, 0x45, 0x29, 0x5e, 0x54, 0x72, 0x50, 0xf0, 0x12, 0x36, 0xc9, 0x34,
-	0x2e, 0x36, 0xd9, 0xba, 0xd9, 0x04, 0xfa, 0x77, 0x04, 0xff, 0xa7, 0x98, 0xec, 0x56, 0xad, 0x87,
-	0x9c, 0x66, 0xe7, 0xcd, 0x37, 0x8f, 0xb7, 0x0c, 0x1c, 0x2b, 0x2c, 0x64, 0xa9, 0x62, 0x0c, 0x13,
-	0xd4, 0x5c, 0x2c, 0x0b, 0xb6, 0x52, 0x52, 0x4b, 0xea, 0xa6, 0x8a, 0x2f, 0x90, 0x17, 0xac, 0x9a,
-	0x44, 0xa8, 0xf9, 0x84, 0x6d, 0x73, 0xde, 0x27, 0x81, 0xc3, 0x39, 0xe6, 0xa8, 0x44, 0x7c, 0xd3,
-	0x48, 0xf4, 0x19, 0xf6, 0xcc, 0xd4, 0x21, 0x6e, 0x77, 0xbc, 0x7f, 0x76, 0xc5, 0xda, 0x6c, 0xd8,
-	0x5f, 0x0b, 0x66, 0xea, 0x6d, 0xae, 0xd5, 0x3a, 0xb0, 0x6e, 0x27, 0x53, 0xe8, 0xff, 0x1e, 0xd0,
-	0x21, 0x74, 0xdf, 0x70, 0xed, 0x10, 0x97, 0x8c, 0x7b, 0xc1, 0xf7, 0x93, 0x1e, 0xc1, 0x4e, 0xc5,
-	0x97, 0x25, 0x3a, 0x9d, 0x5a, 0x6b, 0x9a, 0x69, 0xe7, 0x92, 0x78, 0x08, 0x83, 0x87, 0x15, 0x2a,
-	0xae, 0xa5, 0xb2, 0x39, 0x03, 0xe8, 0x49, 0x23, 0xd9, 0xa4, 0x17, 0xed, 0x49, 0xad, 0xcb, 0x5d,
-	0x82, 0xb9, 0x16, 0x0b, 0x81, 0x2a, 0xf8, 0xb1, 0xf1, 0x12, 0xa0, 0xff, 0x01, 0x3a, 0x82, 0x03,
-	0x8b, 0x84, 0x39, 0xcf, 0xd0, 0x44, 0xee, 0x5b, 0xf1, 0x9e, 0x67, 0x48, 0x4f, 0x61, 0xb8, 0x81,
-	0x2a, 0x54, 0x85, 0x90, 0xb9, 0xf9, 0xc6, 0xc0, 0xea, 0x4f, 0x8d, 0x3c, 0x7b, 0x87, 0x91, 0x90,
-	0xad, 0x51, 0x1f, 0xc9, 0xcb, 0x2c, 0x15, 0xfa, 0xb5, 0x8c, 0x58, 0x2c, 0x33, 0xdf, 0xe0, 0x9b,
-	0x5a, 0x5f, 0xd8, 0x37, 0xcb, 0xfe, 0xf6, 0x72, 0x98, 0xca, 0xb0, 0x26, 0x3e, 0x3a, 0xdd, 0x79,
-	0x70, 0x1d, 0xed, 0xd6, 0xcd, 0xf9, 0x57, 0x00, 0x00, 0x00, 0xff, 0xff, 0x01, 0xda, 0x5c, 0x3f,
-	0x2a, 0x02, 0x00, 0x00,
+	// 280 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x91, 0xcf, 0x4b, 0xfb, 0x40,
+	0x10, 0xc5, 0xd9, 0xe4, 0xfb, 0xb5, 0x74, 0x14, 0x95, 0x45, 0x24, 0x78, 0x0a, 0xf1, 0xd2, 0xd3,
+	0x86, 0xaa, 0x07, 0x29, 0x78, 0x30, 0x28, 0xc5, 0x93, 0x92, 0x8b, 0xe0, 0x25, 0x6c, 0xd2, 0x69,
+	0x5c, 0x6c, 0xb3, 0x75, 0xb2, 0x09, 0xf4, 0xdf, 0x11, 0xfc, 0x3f, 0xc5, 0x74, 0xd7, 0x1f, 0xf5,
+	0x90, 0xd3, 0xce, 0x7b, 0xf3, 0xe6, 0xf1, 0x81, 0x85, 0x63, 0xc2, 0x5a, 0x37, 0x54, 0x60, 0x36,
+	0x43, 0x23, 0xd5, 0xa2, 0x16, 0x2b, 0xd2, 0x46, 0xf3, 0xb0, 0x24, 0x39, 0x47, 0x59, 0x8b, 0x76,
+	0x9c, 0xa3, 0x91, 0x63, 0xb1, 0x9d, 0x8b, 0xde, 0x19, 0xec, 0x4f, 0xb1, 0x42, 0x52, 0xc5, 0xcd,
+	0xc6, 0xe2, 0x8f, 0x30, 0xb0, 0xdb, 0x80, 0x85, 0xfe, 0x68, 0xf7, 0xec, 0x4a, 0xf4, 0xd5, 0x88,
+	0xdf, 0x15, 0xc2, 0xbe, 0xb7, 0x95, 0xa1, 0x75, 0xea, 0xda, 0x4e, 0x26, 0xb0, 0xf7, 0x73, 0xc1,
+	0x0f, 0xc1, 0x7f, 0xc1, 0x75, 0xc0, 0x42, 0x36, 0x1a, 0xa6, 0x9f, 0x23, 0x3f, 0x82, 0xff, 0xad,
+	0x5c, 0x34, 0x18, 0x78, 0x9d, 0xb7, 0x11, 0x13, 0xef, 0x92, 0x45, 0x08, 0x07, 0xf7, 0x2b, 0x24,
+	0x69, 0x34, 0x39, 0xce, 0x14, 0x86, 0xda, 0x5a, 0x8e, 0xf4, 0xa2, 0x9f, 0xd4, 0xb5, 0xdc, 0xcd,
+	0xb0, 0x32, 0x6a, 0xae, 0x90, 0xd2, 0xef, 0x9a, 0x28, 0x01, 0xfe, 0x37, 0xc0, 0x39, 0xfc, 0xab,
+	0xe4, 0x12, 0x2d, 0x69, 0x37, 0xf3, 0x00, 0x06, 0x2d, 0x52, 0xad, 0x74, 0x65, 0x61, 0x9d, 0x4c,
+	0x5e, 0xe1, 0x54, 0xe9, 0x5e, 0x90, 0x07, 0xf6, 0x94, 0x94, 0xca, 0x3c, 0x37, 0xb9, 0x28, 0xf4,
+	0x32, 0xb6, 0xf1, 0xaf, 0xb7, 0xfb, 0xbf, 0xd8, 0x1e, 0xc7, 0xdb, 0xc7, 0x59, 0xa9, 0xb3, 0x2e,
+	0xf1, 0xe6, 0xf9, 0xd3, 0xf4, 0x3a, 0xdf, 0xe9, 0xc4, 0xf9, 0x47, 0x00, 0x00, 0x00, 0xff, 0xff,
+	0xc3, 0x34, 0xb0, 0x64, 0x08, 0x02, 0x00, 0x00,
 }
